--- a/flutter/flutter_template/index.html
+++ b/flutter/flutter_template/index.html
@@ -24,7 +24,7 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="flutter_template" />
-    <link rel="apple-touch-icon" href="favicon.png" />
+    <link rel="apple-touch-icon" href="assets/assets/png/myworldbox/favicon.png" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
@@ -34,6 +34,6 @@
   </head>
   <body>
     <script src="flutter_bootstrap.js" async></script>
-    <script src="../node_modules/jsqr/dist/jsQR.js"></script>
+    <script src="assets/node_modules/jsqr/dist/jsQR.js"></script>
   </body>
 </html>
