--- a/flutter/torchust/index.html
+++ b/flutter/torchust/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-    <base href="./" />
+    <base href="/" />
 
     <meta charset="UTF-8" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
@@ -24,7 +24,7 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="flutter_template" />
-    <link rel="apple-touch-icon" href="assets/assets/png/myworldbox/favicon.png" />
+    <link rel="apple-touch-icon" href="../assets/png/myworldbox/favicon.png" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
@@ -34,6 +34,6 @@
   </head>
   <body>
     <script src="flutter_bootstrap.js" async></script>
-    <script src="assets/node_modules/jsqr/dist/jsQR.js"></script>
+    <script src="../node_modules/jsqr/dist/jsQR.js"></script>
   </body>
 </html>
